The second intent for configure formater

--- a/.github/workflows/Format.yml
+++ b/.github/workflows/Format.yml
@@ -15,3 +15,5 @@ jobs:
           args: "--skip-sorting-imports --replace"
           # Recommended if you use MacOS:
           # github-token: ${{ secrets.GITHUB_TOKEN }}
+
+permissions: write-all
